--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,20 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body{
-   background-color: black;
+body {
+  background-color: black;
+  pointer-events: none;
 }
 
-.canvas1{
-    background-color: black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 4px solid white;
-    max-width: 100%;
-    max-height: 100%;
+.canvas1 {
+  background-color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 4px solid white;
+  max-width: 100%;
+  max-height: 100%;
 }
